force-app/main/default/objects/HeatMap_Column__c/HeatMap_Column__c.object-meta.xml
<CustomObject>
    <label>HeatMap Column</label>
    <nameField>
        <label>HeatMap Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HeatMap Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>