force-app/main/default/objects/HeatMap_Column__c/fields/Color_Coding__c.field-meta.xml
<CustomField>
    <fullName>Color_Coding__c</fullName>
    <label>Color Coding</label>
    <type>TextArea</type>
</CustomField>