force-app/main/default/objects/HeatMap_Column__c/fields/Column_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Column_Alignment__c</fullName>
    <description>Defines the data alignment for the Entries on the Heatmap Dashboard</description>
    <label>Column Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>