force-app/main/default/objects/HeatMap_Column__c/fields/Column_Filter__c.field-meta.xml
<CustomField>
    <fullName>Column_Filter__c</fullName>
    <label>Column Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Information</fullName>
            </value>
            <value>
                <fullName>Product Editions</fullName>
            </value>
            <value>
                <fullName>Enterprise Data</fullName>
            </value>
            <value>
                <fullName>Cloud Data</fullName>
            </value>
            <value>
                <fullName>Unstructured Data</fullName>
            </value>
            <value>
                <fullName>SaaS Data</fullName>
            </value>
            <value>
                <fullName>Data Security Posture</fullName>
            </value>
            <value>
                <fullName>RCV - Archive</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Cyber Resiliency</fullName>
                <isActive>false</isActive>
                <label>Cyber Resiliency</label>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
                <isActive>false</isActive>
                <label>Cyber Security</label>
            </value>
            <value>
                <fullName>Data Threat Analytics</fullName>
                <isActive>false</isActive>
                <label>Data Threat Analytics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>