force-app/main/default/objects/HeatMap_Column__c/fields/Header_Filter__c.field-meta.xml
<CustomField>
    <fullName>Header_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Header Filter</label>
    <type>Checkbox</type>
</CustomField>