force-app/main/default/objects/HeatMap_Column__c/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>False if the column is a workload column, false otherwise</description>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>