force-app/main/default/objects/HeatMap_Column__c/fields/Order_within_Filter__c.field-meta.xml
<CustomField>
    <fullName>Order_within_Filter__c</fullName>
    <label>Order within Filter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>