force-app/main/default/objects/HeatMap_Column__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the entry for the column is read only, false for workload columns as the workload columns are always edtable. True for SE, ACV, etc which cannot be changed directly</description>
    <label>Read-Only</label>
    <type>Checkbox</type>
</CustomField>