force-app/main/default/objects/HeatMap_Column__c/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <description>Created as part of MKT26-1137 to store the report which will be used to display data for the selected Account.</description>
    <label>Report URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>