force-app/main/default/objects/HeatMap_Column__c/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>