force-app/main/default/objects/HeatMap_Column__c/fields/Sorting_Datatype_Definition__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Datatype_Definition__c</fullName>
    <label>Sorting Datatype Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>