force-app/main/default/objects/HeatMap_Column__c/fields/Telemetry_Workload_Name__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Workload_Name__c</fullName>
    <label>Telemetry Workload Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>