force-app/main/default/objects/HeatMap_Column__c/listViews/ALL_VIEW.listView-meta.xml
<ListView>
    <fullName>ALL_VIEW</fullName>
    <columns>NAME</columns>
    <columns>Color_Coding__c</columns>
    <columns>Column_Alignment__c</columns>
    <columns>Column_Filter__c</columns>
    <columns>Manual_Entry__c</columns>
    <columns>Order_within_Filter__c</columns>
    <columns>Read_Only__c</columns>
    <columns>Sortable__c</columns>
    <columns>Sorting_Datatype_Definition__c</columns>
    <columns>Telemetry_Workload_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL VIEW</label>
</ListView>